--- a/package.json
+++ b/package.json
@@ -10,8 +10,9 @@
     "test:install-prisma-environment": "npm link vitest-environment-prisma",
     "build": "tsup src --out-dir build",
     "test": "vitest run --dir src/use-cases",
-    "test:e2e": "vitest run --dir src/http",
     "test:watch": "vitest -dir src/use-cases",
+    "test:e2e": "vitest run --dir src/http",
+    "test:e2e:watch": "vitest --dir src/http",
     "pretest:e2e": "run-s test:create-prisma-environment test:install-prisma-environment",
     "test:coverage": "vitest run --coverage",
     "test:ui": "vitest --ui"
@@ -23,11 +24,13 @@
     "@rocketseat/eslint-config": "1.2.0",
     "@types/bcryptjs": "2.4.2",
     "@types/node": "18.16.3",
+    "@types/supertest": "2.0.12",
     "@vitest/coverage-c8": "0.31.0",
     "@vitest/ui": "0.31.0",
     "eslint": "8.39.0",
     "npm-run-all": "4.1.5",
     "prisma": "4.13.0",
+    "supertest": "6.3.3",
     "tsup": "6.7.0",
     "tsx": "3.12.7",
     "typescript": "5.0.4",
